// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleButton field should render button 1`] = `
<Action
  bsStyle="primary"
  className="btn"
  id="myForm"
  name="my-button"
  onClick={[Function]}
  title="Boom !"
  type="button"
/>
`;

exports[`SingleButton field should render disabled button 1`] = `
<Action
  bsStyle="primary"
  className="btn"
  disabled={true}
  id="myForm"
  name="my-button"
  onClick={[Function]}
  title="Boom !"
  type="button"
/>
`;

exports[`SingleButton field should render inProgress button 1`] = `
<Action
  bsStyle="primary"
  className="btn"
  disabled={true}
  id="myForm"
  name="my-button"
  onClick={[Function]}
  title="Boom !"
  type="button"
/>
`;

exports[`SingleButton field should render reset button 1`] = `
<Action
  bsStyle="primary"
  className="btn"
  id="myForm"
  name="my-button"
  onClick={[Function]}
  title="Boom !"
  type="reset"
/>
`;

exports[`SingleButton field should render submit button 1`] = `
<Action
  bsStyle="primary"
  className="btn"
  id="myForm"
  name="my-button"
  onClick={[Function]}
  title="Boom !"
  type="submit"
/>
`;
